# tutorial-ffmpeg

./: .gitignore  CMakeLists.txt  README.md
01-read-info/: CMakeLists.txt  FormatContext.cpp
01-readinfo/: CMakeLists.txt  FormatContext.h  main.cpp
02-write-video/: CMakeLists.txt  FormatContext.cpp  FormatContext.h  OutputFormat.cpp  OutputFormat.h  main.cpp
03-record-sdl/: CMakeLists.txt
03-record-sdl/src/: Area.cpp  Area.h  BlockingQueue.cpp  BlockingQueue.h  CodecContext.cpp  CodecContext.h  Constants.h  Consumer.cpp  Consumer.h  FormatOutput.cpp  FormatOutput.h  Frame.cpp  Frame.h  Output.cpp  Output.h  OutputFormat.cpp  OutputFormat.h  Packet.cpp  Packet.h  SdlException.cpp  SdlException.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h  SwsContext.cpp  SwsContext.h  Thread.cpp  Thread.h  main.cpp
